# configuard

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: benchmark_configuard.rs
config/: config.toml  config.toml.Darwin  config.toml.FreeBSD  config.toml.Linux
igniters/: wg.igni
launchd/: com.wireguard.plist
src/: common  common.rs  config.rs  instances.rs  lib.rs  main.rs  templates.rs  tests.rs  utils.rs  workstations.rs
systemd/: wg-instance.service
templates/: bridge-setup.sh  instance.conf  route-add.sh  route-del.sh  server-entry.conf  server.conf  wg-syncconf.sh  workstation.conf
tests/entries/: dmilith  dmilith2  dmilith3
