[package]
name = "cguard"
version = "0.1.0"
authors = ["Daniel (dmilith) Dettlaff <daniel@centra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" } # awaiting next release that will work on stable channel
askama = { version = "0.10.3", features = [] }
base64 = "0.12.3"
rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
x25519-dalek = "0.6.0"
walkdir = "2.3.1"
