[package]
name = "configuard"
version = "0.2.1"
authors = ["Daniel (dmilith) Dettlaff <daniel@centra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
askama = { version = "0.10.5", features = [] }
base64 = "0.13.0"
walkdir = "2.3.2"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
regex = "1.5.4"
lazy_static = "1.4.0"

# frozen:
rand = "0.7.3"
rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
lockfile = "0.2.2"
x25519-dalek = "0.6.0"
