[package]
name = "configuard"
version = "0.2.1"
authors = ["Daniel (dmilith) Dettlaff <daniel@centra.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark_configuard"
harness = false


[dependencies]
rocket = { version = "0.5", features = ["json"] }
askama = { version = "0.10", features = [] }
base64 = "0.13.1"
walkdir = "2.4.0"
toml = "0.5.11"
serde_derive = "1.0.193"
serde = "1.0.193"
regex = "1.10.2"
lazy_static = "1.4.0"

# frozen:
rand = "0.7.3"
rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
lockfile = "0.2.2"
x25519-dalek = "0.6.0"
chrono = { version = "0.4.31", features = ["std"] }
